# nk-software-summer-training

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_project_spaces.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  file.py  mixins.py  project.py  report.py  template.py  user.py
backend/app/prompts/: __init__.py  report_prompt.md
backend/app/repositories/: __init__.py  base.py  project.py  report.py
backend/app/schemas/: __init__.py  auth.py  common.py  project.py  report.py  template.py
backend/app/services/: file_text.py  github_progress.py  project_context.py
backend/app/services/ai/: __init__.py  base.py  deepseek.py  factory.py  mock.py
backend/app/services/export/: __init__.py  base.py  excel.py  mock.py  pdf.py  word.py  (+2 more)
backend/tests/: conftest.py  test_ai_ocr_endpoints.py  test_database_compat.py  test_deepseek_ai.py  test_docx_template.py  test_excel_pdf_export.py  test_github_progress.py  test_health.py  test_mock_ai.py  test_mock_ocr.py  test_ocr_endpoints.py  test_paddle_ocr.py  test_projects.py  test_qwen_ocr.py  test_report_export_endpoint.py  test_schema.py  test_service_factories.py  test_template_preview_endpoint.py  test_template_word_export.py  test_word_export.py
(+65 files in other folders)
