[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reportflow-backend"
version = "0.1.0"
description = "FastAPI backend for ReportFlow AI"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.111.0",
  "docxtpl",
  "openpyxl",
  "passlib[bcrypt]>=1.7.4",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-docx",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "pymysql>=1.1.1",
  "reportlab>=4.2.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.29.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.4.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
ignore_missing_imports = true
